# pgadmin-installer

./: Makefile.am  README.md  autogen.sh  configure.ac  pgadmin-installer.in
resources/: config_local.py  gunicorn@.service.in  normalize-email  pgadmin-ctl.in  pgadmin.desktop.in  pgadmin.service.in
